--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -339,14 +339,14 @@ a, a:hover {
   .postcard__tagbox {
     display: flex;
     flex-flow: row wrap;
-    font-size: 14px;
+    font-size: 18px;
     margin: 20px 0 0 0;
 		padding: 0;
     justify-content: center;
-
+  }
     .tag__item {
       display: inline-block;
-      background: rgba(83, 83, 83, 0.4);
+      background: rgba(169, 235, 174, 0.4);
       border-radius: 3px;
       padding: 2.5px 10px;
       margin: 0 5px 5px 0;
@@ -354,10 +354,27 @@ a, a:hover {
       user-select: none;
       transition: background-color 0.3s;
 
+
       &:hover {
         background: rgba(83, 83, 83, 0.8);
       }
     }
+
+      .tag__cat {
+        display: inline-block;
+        background: rgba(39, 156, 202, 0.4);
+        border-radius: 3px;
+        padding: 2.5px 10px;
+        margin: 0 5px 5px 0;
+        cursor: default;
+        user-select: none;
+        transition: background-color 0.3s;
+        
+        &:hover {
+          background: rgba(235, 236, 148, 0.8);
+        }
+      
+    
   }
 
   &:before {
