--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,13 @@
 @import'bootstrap';
 @import './style.css';
+
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import '@fortawesome/fontawesome-free/css/fontawesome.css';
+@import '@fortawesome/fontawesome-free/css/regular.css';
+@import '@fortawesome/fontawesome-free/css/solid.css';
+@import '@fortawesome/fontawesome-free/css/brands.css';
+
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
