--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,6 @@
 @import'bootstrap';
 @import './style.css';
 
-
-
-
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 @import '@fortawesome/fontawesome-free/css/fontawesome.css';
@@ -11,5 +8,6 @@
 @import '@fortawesome/fontawesome-free/css/solid.css';
 @import '@fortawesome/fontawesome-free/css/brands.css';
 
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+/* @import "/node_modules/flag-icons/css/flag-icons.min.css"; */
