finite categorie in home

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,3 +11,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 /* @import "/node_modules/flag-icons/css/flag-icons.min.css"; */
+
+@import "/node_modules/flag-icons/css/flag-icons.min.css";
