--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -835,3 +835,10 @@ body {
 .iconaante:hover {
   color:rgb(255, 255, 255)
 }
+
+.img-preview {
+    width: 256px; 
+    height: 256px; 
+    /* width: 100%; 
+    height: 100%;  */
+} 
