--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,16 @@
 /* // <uniquifier>: Use a unique and descriptive class name
 // <weight>: Use a value from 100 to 900 */
+:root{
+--main-green: #79dd09 ;
+--main-green-rgb-015: rgba(121, 221, 9, 0.1) ;
+--main-yellow: #bdbb49;
+--main-yellow-rgb-015: rgba(189, 187, 73, 0.1);
+--main-red: #377dba;
+--main-red-rgb-015: rgba(189, 21, 11, 0.1);
+--main-blue: #0076bd;
+--main-blue-rgb-015: rgba(249, 250, 251, 0.1);
+
+}
 
 .raleway-regular{
   font-family: "Raleway", sans-serif;
@@ -251,24 +262,19 @@ background: linear-gradient(0deg, rgba(252,252,255,0.8799894957983193) 0%, rgb(1
         padding: 0.75rem 1rem;
       }
 
-      @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
-$main-green: #79dd09 !default;
-$main-green-rgb-015: rgba(121, 221, 9, 0.1) !default;
-$main-yellow: #bdbb49 !default;
-$main-yellow-rgb-015: rgba(189, 187, 73, 0.1) !default;
-$main-red: #bd150b !default;
-$main-red-rgb-015: rgba(189, 21, 11, 0.1) !default;
-$main-blue: #0076bd !default;
-$main-blue-rgb-015: rgba(0, 118, 189, 0.1) !default;
+      /* @import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap"); */
+
 
 /* This pen */
-body {
+
+
+/* body {
 	font-family: "Baloo 2", cursive;
 	font-size: 16px;
-	color: #ffffff;
-	text-rendering: optimizeLegibility;
+	/* color: #ffffff; */
+	/* text-rendering: optimizeLegibility;
 	font-weight: initial;
-}
+} */ */
 
 .dark {
 	background: #110f16;
@@ -304,10 +310,10 @@ a, a:hover {
   color: #ffffff;
 
 	&.dark {
-		background-color: #18151f;
+		background-color: #15161f;
 	}
 	&.light {
-		background-color: #e1e5ea;
+		background-color: #eae5e1;
 	}
 	
 	.t-dark {
@@ -348,7 +354,7 @@ a, a:hover {
     height: 10px;
     margin: 10px 0;
     border-radius: 5px;
-    background-color: #424242;
+    background-color: #0ac8f3;
     transition: width 0.2s ease;
   }
 
@@ -451,7 +457,7 @@ a, a:hover {
       content: "";
       position: absolute;
       display: block;
-      background: #18151f;
+      background: #16151f;
       top: -20%;
       height: 130%;
       width: 55px;
@@ -509,79 +515,79 @@ a, a:hover {
 
 /* COLORS */
 .postcard .postcard__tagbox .green.play:hover {
-	background: $main-green;
+	background: var(--main-green);
 	color: black;
 }
 .green .postcard__title:hover {
-	color: $main-green;
+	color: var(--main-green);
 }
 .green .postcard__bar {
-	background-color: $main-green;
+	background-color: var(--main-green);
 }
 .green::before {
 	background-image: linear-gradient(
 		-30deg,
-		$main-green-rgb-015,
+		var(--main-green-rgb-015),
 		transparent 50%
 	);
 }
 .green:nth-child(2n)::before {
-	background-image: linear-gradient(30deg, $main-green-rgb-015, transparent 50%);
+	background-image: linear-gradient(30deg, var(--main-green-rgb-015), transparent 50%);
 }
 
 .postcard .postcard__tagbox .blue.play:hover {
-	background: $main-blue;
+	background: var(--main-blue);
 }
 .blue .postcard__title:hover {
-	color: $main-blue;
+	color: var(--main-blue);
 }
 .blue .postcard__bar {
-	background-color: $main-blue;
+	background-color: var(--main-blue);
 }
 .blue::before {
-	background-image: linear-gradient(-30deg, $main-blue-rgb-015, transparent 50%);
+	background-image: linear-gradient(-30deg, var(--main-blue-rgb-015), transparent 50%);
 }
 .blue:nth-child(2n)::before {
-	background-image: linear-gradient(30deg, $main-blue-rgb-015, transparent 50%);
+	background-image: linear-gradient(30deg, var(--main-blue-rgb-015), transparent 50%);
 }
 
 .postcard .postcard__tagbox .red.play:hover {
-	background: $main-red;
+	background: var(--main-red)
 }
 .red .postcard__title:hover {
-	color: $main-red;
+	color: var(--main-red)
 }
 .red .postcard__bar {
-	background-color: $main-red;
+	background-color:var(--main-red);
 }
 .red::before {
-	background-image: linear-gradient(-30deg, $main-red-rgb-015, transparent 50%);
+	background-image: linear-gradient(-30deg, var(--main-red-rgb-015), transparent 50%);
 }
 .red:nth-child(2n)::before {
-	background-image: linear-gradient(30deg, $main-red-rgb-015, transparent 50%);
+	background-image: linear-gradient(-30deg, var(--main-red-rgb-015), transparent 50%);
 }
 
 .postcard .postcard__tagbox .yellow.play:hover {
-	background: $main-yellow;
+	background: var(--main-yellow);
 	color: black;
 }
 .yellow .postcard__title:hover {
-	color: $main-yellow;
+	color: var(--main-yellow);
 }
 .yellow .postcard__bar {
-	background-color: $main-yellow;
+	background-color: var(--main-yellow);
 }
 .yellow::before {
 	background-image: linear-gradient(
 		-30deg,
-		$main-yellow-rgb-015,
+		var(--main-yellow-rgb-015),
 		transparent 50%
 	);
 }
 .yellow:nth-child(2n)::before {
 	background-image: linear-gradient(
 		30deg,
-		$main-yellow-rgb-015,
+		var(--main-yellow-rgb-015),
 		transparent 50%
 	);
 }
@@ -590,14 +596,14 @@ a, a:hover {
 	.green::before {
 		background-image: linear-gradient(
 			-80deg,
-			$main-green-rgb-015,
+			var(--main-green-rgb-015),
 			transparent 50%
 		);
 	}
 	.green:nth-child(2n)::before {
 		background-image: linear-gradient(
 			80deg,
-			$main-green-rgb-015,
+			var(--main-green-rgb-015),
 			transparent 50%
 		);
 	}
@@ -605,32 +611,32 @@ a, a:hover {
 	.blue::before {
 		background-image: linear-gradient(
 			-80deg,
-			$main-blue-rgb-015,
+			var(--main-blue-rgb-015),
 			transparent 50%
 		);
 	}
 	.blue:nth-child(2n)::before {
-		background-image: linear-gradient(80deg, $main-blue-rgb-015, transparent 50%);
+		background-image: linear-gradient(80deg, var(--main-blue-rgb-015), transparent 50%);
 	}
 
 	.red::before {
-		background-image: linear-gradient(-80deg, $main-red-rgb-015, transparent 50%);
+		background-image: linear-gradient(-80deg, var(--main-red-rgb-015), transparent 50%);
 	}
 	.red:nth-child(2n)::before {
-		background-image: linear-gradient(80deg, $main-red-rgb-015, transparent 50%);
+		background-image: linear-gradient(80deg, var(--main-red-rgb-015), transparent 50%);
 	}
 	
 	.yellow::before {
 		background-image: linear-gradient(
 			-80deg,
-			$main-yellow-rgb-015,
+			var(--main-yellow-rgb-015),
 			transparent 50%
 		);
 	}
 	.yellow:nth-child(2n)::before {
 		background-image: linear-gradient(
 			80deg,
-			$main-yellow-rgb-015,
+			var(--main-yellow-rgb-015),
 			transparent 50%
 		);
 	}
@@ -670,32 +676,7 @@ a, a:hover {
 }
 
 
-/* CSS per button icone in homepage */
-/*
-    Auther: Abdelrhman Said
-*/
-/* 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-*:focus,
-*:active {
-  outline: none !important;
-  -webkit-tap-highlight-color: transparent;
-}
-
-html,
-body {
-  display: grid;
-  height: 100%;
-  width: 100%;
-  font-family: "Poppins", sans-serif;
-  place-items: center;
-  background: linear-gradient(315deg, #ffffff, #d7e1ec);
-} */
 
 .wrapper {
   display: inline-flex;
@@ -842,3 +823,65 @@ body {
     /* width: 100%; 
     height: 100%;  */
 } 
+
+
+ /* Bottone Banner */
+ .button-1 {
+  position: absolute;
+  top: 95%;
+  left: 25%;
+  text-decoration: none;
+
+  border: none;
+  font-size: 18px;
+  font-family: inherit;
+  cursor: pointer;
+  color: #fff;
+  width: 9em;
+  height: 3em;
+  line-height: 2em;
+  text-align: center;
+  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 300%;
+  border-radius: 30px;
+  z-index: 1;
+}
+
+.button-1:hover {
+  animation: ani 8s linear infinite;
+  border: none;
+}
+
+@keyframes ani {
+  0% {
+    background-position: 0%;
+  }
+
+  100% {
+    background-position: 400%;
+  }
+}
+
+.button-1:before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
+  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 400%;
+  border-radius: 35px;
+  transition: 1s;
+}
+
+.button-1:hover::before {
+  filter: blur(20px);
+}
+
+.button-1:active {
+  background: linear-gradient(32deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+}
+
+
