tolte card sciolte lasciato solo carousel con aggiustamenti da rifinire

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,8 +5,8 @@
 --main-green-rgb-015: rgba(121, 221, 9, 0.1) ;
 --main-yellow: #bdbb49;
 --main-yellow-rgb-015: rgba(189, 187, 73, 0.1);
---main-red: #377dba;
---main-red-rgb-015: rgba(189, 21, 11, 0.1);
+--main-red: #3973de;
+--main-red-rgb-015: rgba(7, 2, 48, 0.1);
 --main-blue: #0076bd;
 --main-blue-rgb-015: rgba(249, 250, 251, 0.1);
 
