--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -57,13 +57,6 @@ background: linear-gradient(0deg, rgba(252,252,255,0.8799894957983193) 0%, rgb(1
     box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
 }
 
-.verdesf{
-    margin: 10px;
-    padding: 20px;
-    background: rgb(252,252,255);
-    background: linear-gradient(0deg, rgba(252,252,255,0.8799894957983193) 0%, rgb(13, 102, 50) 0%, rgba(253,253,255,1) 100%);
-}
-
 .btn_ver{
     margin: 10px;
     padding: 20px;
@@ -283,7 +276,7 @@ a, a:hover {
 
 #pageHeaderTitle {
 	margin: 2rem 0;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	text-align: center;
 	font-size: 2.5rem;
 }
