--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,7 +68,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.5); /* Colore bianco semi-trasparente */
+  background-color: rgba(255, 252, 252, 0.39); /* Colore bianco semi-trasparente */
   z-index: 2;
 }
 
@@ -78,11 +78,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  color: black;
-  width: 100%;
-  margin: 0;
-  padding: 10px 0;
+  background-color: rgba(0, 0, 0, 0.555);
+  color: rgb(2, 2, 2);
+  width: 40%;
+  margin: ;
+  padding: 10px 0px;
   text-align: center;
 }
 
@@ -942,7 +942,7 @@ a, a:hover {
   background-image: url('url_dell_immagine_di_sfondo');
   background-size: cover;
   background-position: center;
-  color: white; /* Cambia il colore del testo per renderlo leggibile sopra l'immagine di sfondo */
+  color: rgb(255, 255, 255); /* Cambia il colore del testo per renderlo leggibile sopra l'immagine di sfondo */
 }
 
 
