--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -78,10 +78,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.555);
+  background-color: rgba(0, 0, 0, 0.342);
   color: rgb(2, 2, 2);
   width: 40%;
-  margin: ;
+  margin: 0;
   padding: 10px 0px;
   text-align: center;
 }
