--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -80,7 +80,7 @@
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.342);
   color: rgb(2, 2, 2);
-  width: 40%;
+  width: 100%;
   margin: 0;
   padding: 10px 0px;
   text-align: center;
@@ -962,4 +962,18 @@ a, a:hover {
 
 .footer-nav a:hover {
   text-decoration: underline;
+}
+
+.titolo-annuncio {
+  /* top: 50%;
+  left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  /* background-color: rgba(21, 74, 189, 0.687); */
+  color: rgb(241, 233, 233);
+  width: 100%;
+  margin: ;
+  padding: 10px 0px;
+  text-align: center;
+  background: rgb(252,252,255);
+  background: radial-gradient(circle, rgba(252,252,255,0.8799894957983193) 0%, rgba(11,102,233,1) 0%, rgba(253,253,255,1) 100%);
 }
