--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -971,7 +971,7 @@ a, a:hover {
   /* background-color: rgba(21, 74, 189, 0.687); */
   color: rgb(241, 233, 233);
   width: 100%;
-  margin: ;
+  margin: 0;
   padding: 10px 0px;
   text-align: center;
   background: rgb(252,252,255);
