--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,3 +13,5 @@
 /* @import "/node_modules/flag-icons/css/flag-icons.min.css"; */
 
 @import "/node_modules/flag-icons/css/flag-icons.min.css";
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
