--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -975,13 +975,7 @@ a, a:hover {
   background: radial-gradient(circle, rgba(252,252,255,0.8799894957983193) 0%, rgba(11,102,233,1) 0%, rgba(253,253,255,1) 100%);
 }
 
-
-
-
-
-
-
-
+/* CHI SIAMO */
 *,
 *::after,
 *::before {
@@ -989,7 +983,11 @@ a, a:hover {
   padding: 0;
   box-sizing: border-box;
 }
-/* .body {
+/* html {
+  font-size: 62.5%;
+}
+
+body {
   width: 100vw;
   min-height: 100vh;
   background-color: #f0f0f0;
@@ -998,6 +996,7 @@ a, a:hover {
   justify-content: center;
   align-items: center;
 } */
+
 
 .containerCard {
   position: relative;
