--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1022,9 +1022,9 @@ body {
 
 .containerCard .box {
   position: relative;
-  width: 30rem;
-  height: 30rem;
-  margin: 4rem;
+  width: 15rem;
+  height: 15rem;
+  margin: 1rem;
 }
 
 .containerCard .box:hover .imgBoxCard {
@@ -1046,8 +1046,8 @@ body {
 }
 
 .imgBoxCard img {
-  width: 30rem;
-  height: 30rem;
+  width: 15rem;
+  height: 15rem;
   object-fit: cover;
   resize: both;
 }
@@ -1070,7 +1070,7 @@ body {
 
 .contentCard h2 {
   display: block;
-  font-size: 2rem;
+  font-size: 0.9rem;
   color: #111;
   font-weight: 500;
   line-height: 2rem;
@@ -1078,8 +1078,8 @@ body {
 }
 
 .contentCard span {
-  color: #555;
-  font-size: 1.4rem;
+  color: #413e3e;
+  font-size: 0.7rem;
   font-weight: 300;
   letter-spacing: 2px;
 }
