--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1122,6 +1122,7 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 0px !important;
 }
 .example-2 .icon-content {
   margin: 0 10px;
